Just some updates.  Mk 5th May 2013 x

--- a/Setup_and_Config/sim_opt.conf
+++ b/Setup_and_Config/sim_opt.conf
@@ -34,7 +34,8 @@ temperature 	     $Temp
 ##  -make sure to use the right parameter set!
 
 paraTypeCharmm	on
-parameters  	../../InputFiles/Parameters/par_all36_prot.prm
+parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
+#parameters  	../../InputFiles/Parameters/par_all36_prot.prm
 #parameters  	../../InputFiles/Parameters/par_all36_na.prm
 #parameters  	../../InputFiles/Parameters/par_all36_lipid.prm
 #parameters  	../../InputFiles/Parameters/par_all36_carb.prm
@@ -95,9 +96,9 @@ langevinHydrogen    off
 
 ##  Periodic Boundary Conditions: ----------------------------------------------
 # make sure to check that the cell dimensions match your input files! 
-cellBasisVector1    96.      0.      0.
-cellBasisVector2     0.     96.      0.
-cellBasisVector3     0.      0.     96.
+cellBasisVector1    64.      0.      0.
+cellBasisVector2     0.     64.      0.
+cellBasisVector3     0.      0.     64.
 cellOrigin           0       0       0
 wrapAll             on
 wrapWater           on
